--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "jest"
+    "test": "mocha --timeout 10000"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,8 @@
     "express": "^4.17.3",
     "jest": "^27.5.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^2.5.3",
+    "mongoose": "^6.2.6",
     "supertest": "^6.2.2",
     "validator": "^13.7.0"
   },
